[gd_scene load_steps=12 format=3 uid="uid://d0arumlvmxady"]

[ext_resource type="Shader" path="res://src/titlescreen/overlay.gdshader" id="1_17ihm"]
[ext_resource type="Script" path="res://src/battle/battle_yokai.gd" id="1_n8hpv"]
[ext_resource type="Texture2D" uid="uid://covon1a5nmpmg" path="res://res/yokai/jibanyan/jibanyan.png" id="2_kqog4"]
[ext_resource type="Texture2D" uid="uid://te4uwhom7kcu" path="res://res/battle/ui/health_bar.png" id="4_d7a0h"]
[ext_resource type="Texture2D" uid="uid://bu40c2kpc02i5" path="res://res/battle/fx/hit_fx.png" id="5_uw4bc"]
[ext_resource type="Texture2D" uid="uid://dkmmblycfom3x" path="res://res/battle/ui/target/target_02.png" id="6_il4qv"]
[ext_resource type="Texture2D" uid="uid://ddvqlly0ee1kw" path="res://res/battle/ui/soulimate/soulimate_select.png" id="7_mga13"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ubimd"]
resource_local_to_scene = true
shader = ExtResource("1_17ihm")
shader_parameter/color = Vector4(1, 1, 0, 1)
shader_parameter/mx = 0.0

[sub_resource type="Animation" id="Animation_6rak4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/mx")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wgubg"]
resource_name = "flash"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/mx")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_py8ro"]
_data = {
"RESET": SubResource("Animation_6rak4"),
"flash": SubResource("Animation_wgubg")
}

[node name="BattleYokai" type="Sprite2D"]
material = SubResource("ShaderMaterial_ubimd")
texture = ExtResource("2_kqog4")
script = ExtResource("1_n8hpv")

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_py8ro")
}

[node name="ui" type="Sprite2D" parent="."]
position = Vector2(0, 26)
texture = ExtResource("4_d7a0h")

[node name="battle_yokai" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="battle_yokai"]
polygon = PackedVector2Array(-14, 16, -14, -16, 15, -16, 15, 16)

[node name="tick" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="damage" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_uw4bc")

[node name="selector" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -22)
texture = ExtResource("6_il4qv")

[node name="soulimate_selector" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_mga13")
hframes = 2

[connection signal="timeout" from="tick" to="." method="_on_tick_timer_timeout"]
